Fixed z-index of winning message

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ footer {
     color: white;
     font-size: 5rem;
     flex-direction: column;
+    z-index: 1;
 }
 
 .winning-message button {
